syntax = "proto2";

package fast_semantic_segmentation.protos;

message EvalConfig {
    optional EvalInputType eval_input_type = 1;
    optional bool flipped = 2;
}

message EvalInputType {
  oneof eval_input_type_oneof {
    CroppedEvalInput cropped_eval_input = 1;
    PaddedEvalInput padded_eval_input = 2;
  }
}

message CroppedEvalInput {
  optional int32 height = 1;
  optional int32 width = 2;
}

message PaddedEvalInput {
  optional int32 height = 1;
  optional int32 width = 2;
}
